# kaldi

./: CMakeLists.txt
src/base/: kaldi-math.cc
src/fstext/: fstext-utils-inl.h
